--- a/app/Resources/views/user/userFrontEnd.html.twig
+++ b/app/Resources/views/user/userFrontEnd.html.twig
@@ -13,64 +13,145 @@
 {% endblock %}
 
 {% block main %}
-    <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/theme.default.min.css') }}" />
-    <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/jquery.tablesorter.pager.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('vendors/jquery-ui/themes/flick/jquery-ui.css') }}">
+    <script src="{{ asset('vendors/jquery-ui/jquery-ui.min.js') }}" type=text/javascript></script>
+
+    <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/theme.default.min.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/jquery.tablesorter.pager.min.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/filter.formatter.min.css') }}">
 
     <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/jquery.tablesorter.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/jquery.tablesorter.widgets.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/extras/jquery.tablesorter.pager.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/widgets/widget-output.min.js') }}"></script>
+    <script type="text/javascript"
+            src="{{ asset('vendors/tablesorter/dist/js/jquery.tablesorter.widgets.min.js') }}"></script>
+    <script type="text/javascript"
+            src="{{ asset('vendors/tablesorter/dist/js/extras/jquery.tablesorter.pager.min.js') }}"></script>
+    <script type="text/javascript"
+            src="{{ asset('vendors/tablesorter/dist/js/widgets/widget-output.min.js') }}"></script>
+    <script src="{{ asset('vendors/tablesorter/dist/js/widgets/widget-filter-formatter-jui.min.js') }}"></script>
 
     <script>
         jQuery(document).ready(function () {
-            $('.download').click(function(e){
+            $('.download').click(function (e) {
                 e.preventDefault();
-                var table = $(this).closest('.container').find('.tablesorter');
+                let table = $(this).closest('.container').find('.tablesorter');
                 table.trigger('outputTable');
             });
             $(".tablesorter")
-                    .tablesorter({
-                        widthFixed: true,
-                        widgets: ['zebra', 'filter', 'output'],
-                        widgetOptions : {
-                            output_delivery      : 'd',
-                            output_saveFileName  : 'mytable.csv'
+                .tablesorter({
+                    widthFixed: true,
+                    widgets: ['zebra', 'filter', 'output'],
+                    widgetOptions: {
+                        output_delivery: 'd',
+                        output_saveFileName: 'mytable.csv',
+                        filter_reset: 'button.reset',
+                        filter_formatter: {
+                            '.inscrCol' : function($cell, indx) {
+                                return $.tablesorter.filterFormatter.uiDatepicker( $cell, indx, {
+                                    changeMonth : true,
+                                    changeYear : true
+                                });
+                            }
+                        },
+                        filter_placeholder : {
+                            from : 'Du...',
+                            to   : 'Au...'
                         }
-                    })
-                    .tablesorterPager({
-                        container: $("#pager"),
-                        output: 'de {startRow} à {endRow} sur {totalRows} lignes',
-                        size: 50
+                    }
+                })
+                .tablesorterPager({
+                    container: $("#pager"),
+                    output: 'de {startRow} à {endRow} sur {totalRows} lignes',
+                    size: 50
+                });
+
+            $('.dateFrom').width('90px').prev('label').text('Du : ');
+            $('.dateTo').width('90px').prev('label').text('Au : ');
+
+            $('.selectAll').click(function (e) {
+                e.preventDefault();
+                let select = $('.selectUser:checked').length == 0;
+                $('.selectUser').prop('checked', select);
+            });
+            $('.actionEnLot').on('change', function() {
+                let userIds = [];
+                let mode = this.value;
+                $('.selectUser:checked').each(function () {
+                    let idUser = $(this).closest('.userLine').attr('data-userId');
+                    userIds.push(idUser);
+                });
+
+                $('.modal').modal('toggle');
+                $('.alertModal').hide();
+                if(mode === 'delete'){
+                    $('.alertDelete').show();
+                }else if(mode === 'desact'){
+                    $('.alertDesinscr').show();
+                }else if(mode === 'react'){
+                    $('.alertReact').show();
+                }
+                $('.nbCompte').text(userIds.length);
+                if(userIds.length > 1){
+                    $('.plurielCompte').text('s');
+                }else{
+                    $('.plurielCompte').text('');
+                }
+
+                $('.valideDesinscr').unbind('click').click(function () {
+                    $.ajax({
+                        type: "POST",
+                        url: "{{ path('actionLotsUsers_ajax') }}",
+                        data: {
+                            userIds: userIds,
+                            mode: mode
+                        },
+                        dataType: "json",
+                        success: function (response) {
+                            setTimeout(function () {
+                                window.location.href = window.location.href;
+                            }, 300);
+                        }
                     });
+                });
+            });
+            $('.cancelDesinscr').click(function () {
+                $('.modal').modal('toggle');
+            });
         });
     </script>
 
-    <div class="container mt-100 mb-40">
+    <div class="container mt-20 mb-40">
         <div class="row">
             <div class="col-md-12">
                 <table class="tablesorter ">
                     <thead>
                     <tr>
+                        <th data-filter="false"></th>
                         <th>Id</th>
                         <th>Email</th>
                         <th>Prénom</th>
                         <th>Nom</th>
+                        <th>Statut</th>
                         <th>Cohortes</th>
                         <th class="filter-select">Institut</th>
                         <th class="filter-select">Activé</th>
+                        <th class="inscrCol">inscription</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for myUser in myUsers %}
                         <tr class="userLine" data-userId="{{ myUser.user.id }}">
+                            <td><input class="selectUser" type="checkbox"></td>
                             <td><a href="{{ path('user', {id:myUser.user.id }) }}">{{ myUser.user.id }}</a></td>
                             <td><a href="{{ path('user', {id:myUser.user.id }) }}">{{ myUser.user.email }}</a></td>
                             <td>{{ myUser.user.firstname }}</td>
                             <td>{{ myUser.user.lastname }}</td>
+                            <td>{{ myUser.user.statut }}</td>
                             <td>
                                 {% for coh in myUser.cohortes %}
                                     {% for key, inscr in coh %}
-                                    <a href="{{ path('itemUsers', {id: inscr.cohorte.id, type: "cohorte"}) }}">{{ inscr.cohorte.nom }} ({{ inscr.role.nom|replace({ 'Enseignant': 'Enseignant correcteur' }) }}), </a>
+                                        <a href="{{ path('itemUsers', {id: inscr.cohorte.id, type: "cohorte"}) }}">{{ inscr.cohorte.nom }}
+                                            ({{ inscr.role.nom|replace({ 'Enseignant': 'Enseignant correcteur' }) }}
+                                            ), </a>
                                     {% endfor %}
                                 {% endfor %}
                             </td>
@@ -82,6 +163,7 @@
                                     non
                                 {% endif %}
                             </td>
+                            <td>{{ myUser.user.createdAt|localizeddate('none', 'none', null, null, 'Y/LL/dd' ) }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
@@ -101,7 +183,47 @@
                             <option value="all">Toutes les lignes</option>
                         </select>
                         <button class="download">Télécharger le CSV</button>
+                        <button class="selectAll">Sélectionner tous</button>
+                        <span>Avec les sélectionnés :</span>
+                        <select class="actionEnLot">
+                            <option value="default"></option>
+                            <option value="desact">Désactiver les comptes</option>
+                            <option value="react">Réactiver les comptes</option>
+                            <option value="delete">Supprimer les sélectionnés</option>
+                        </select>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
+
+                <div class="modal-body" data-contentModal="devoirDisplay" data-idItem=""
+                     style="background:#aaa; background-size:cover">
+                    <div class="row">
+                        <div class="bginverse">
+                            <div class="">
+                                <div class="alert alertModal alertDelete alert-danger mb-10">
+                                    <strong>Attention!</strong> Voulez-vous vraiment procéder à la suppression de <span class="nbCompte"></span> compte<span class="plurielCompte"></span> ?
+                                </div>
+                                <div class="alert alertModal alertDesinscr alert-danger mb-10">
+                                    <strong>Attention!</strong> Voulez-vous vraiment procéder à la désactivation de <span class="nbCompte"></span> compte<span class="plurielCompte"></span> ?
+                                </div>
+                                <div class="alert alertModal alertReact alert-danger mb-10">
+                                    <strong>Attention!</strong> Voulez-vous vraiment procéder à la réactivation de <span class="nbCompte"></span> compte<span class="plurielCompte"></span> ?
+                                </div>
+
+                                <div class="row mb-10" style="text-align: center">
+                                    <div class="btn btn-sm btn-info mb-3 valideDesinscr">Valider</div>
+                                    <div class="btn btn-sm btn-info mb-3 cancelDesinscr">Annuler</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
